# ai-weather

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/commands/: release.md
.github/workflows/: docker.yml  lint.yml
aiweather/: main.py
aiweather/ai/: __init__.py  base.py  manager.py  normalizer.py  ollama.py
aiweather/config/: __init__.py  loader.py  models.py
aiweather/scheduler/: __init__.py  jobs.py
aiweather/state/: __init__.py  service.py
aiweather/storage/: __init__.py  archive.py
aiweather/weather/: __init__.py  client.py
aiweather/websocket/: __init__.py  server.py
config/: config.example.yaml
docker/: Dockerfile  docker-compose.yml
static/: index.html
static/css/: styles.css
static/js/: app.js  grid.js  websocket.js
static/templates/: error.html
