[project]
name = "ai-weather"
version = "1.3.0"
description = "AI Weather - Not in the way you think"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Anty", email = "info+ai-weather@codetopic.eu"}
]

[project.urls]
Homepage = "https://github.com/Anty0/ai-weather"
Repository = "https://github.com/Anty0/ai-weather"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
extend-select = ["E501"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
extra_checks = true
plugins = ['pydantic.mypy']

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "apscheduler.schedulers.asyncio",
    "apscheduler.triggers.cron",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
